--- a/app/src/main/res/layout/item_user.xml
+++ b/app/src/main/res/layout/item_user.xml
@@ -26,7 +26,6 @@
             android:id="@+id/tv_address"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="@string/app_name"
             android:layout_marginTop="3dp"
             android:textSize="14sp"
             android:textColor="@android:color/darker_gray"/>
@@ -36,9 +35,19 @@
         android:id="@+id/btn_update"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+
+        android:layout_centerVertical="true"
+        android:layout_toStartOf="@id/btn_delete"
+        android:layout_marginRight="10dp"
+        android:text="Update" />
+
+    <Button
+        android:id="@+id/btn_delete"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_centerVertical="true"
-        android:text="Update"/>
+        android:text="Delete"/>
 
 
 
